# operations-platform

./: .env  CHANGES_TODAY.md  Cargo.toml  README.md
docs/: LEARNING_TRANSACTION_EXECUTOR_ISSUE.md
docs/architecture/: 001_project_structure.md  002_repository_pattern.md  003_error_handling.md  004_backend_v2_domain_routes.md  backend-v2-migration.md
docs/business_rules/: business_rules.md
docs/learning/: learning.md
sql/: 000_create_database.sql  001_create_wso_orders.sql  002_create_wso_line_items.sql  003_v2_schema_changes.sql  004_wso_attachment.sql
src/: app_state.rs  main.rs
src/database/: mod.rs
src/errors/: app_error.rs
src/handlers/: category.rs  dashboard.rs  line_item.rs  mod.rs  wso.rs
src/models/: category.rs  create_complete_wso.rs  dashboard.rs  line_item.rs  mod.rs  wso.rs  wso_detail.rs  wso_summary.rs
src/repositories/: category.rs  line_item.rs  mod.rs  wso.rs
src/routes/: category.rs  dashboard.rs  line_item.rs  wso.rs
src/services/: category.rs  dashboard.rs  line_item.rs  mod.rs  wso.rs  wso_create.rs  wso_rules.rs
