[package]
name = "wso-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8", features=["multipart"] }
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono"
]}
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = {version = "0.7.0", features = ["fs"] }
